added a bit of html display

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <h1>JS Array Methods</h1>
+    <hr />
+    <h2>Filter Method</h2>
+    <h3>Can Drink</h3>
+    <div id="canDrink"></div>
+    <br />
+    <h3>Retail Companies</h3>
+    <div id="retailCompanies"></div>
+    <hr />
     <script src="main.js"></script>
   </body>
 </html>
